# epilink

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .pypirc.example  AGENTS.md  CITATION.cff  CONTRIBUTING.md  LICENSE  PUBLISHING_GUIDE.md  README.md  RELEASE_CHECKLIST.md  TESTPYPI.md  VERSIONING_QUICK_REF.md  VERSION_MANAGEMENT.md  WORKFLOW_VISUAL_GUIDE.md  characterising_epilink.ipynb  config.yaml  environment.yml  mkdocs.yml  pyproject.toml  testing.ipynb  verify_cli.py
.github/workflows/: ci.yml  release.yml  test-release.yml
data/: boston_data_processing.py
data/raw/boston/: MGH_DPH_98percent_772samples_metadata.csv  boston_data_processing.md
docs/: api.md  benchmark_api.py  cli.md  epilink.md  epilink_characterisation.ipynb  epilink_compatibility_walkthrough.ipynb  epilink_interactive_heatmap.ipynb  epilink_schematic.tex  epilink_schematic.tif  epilink_usage.ipynb  epilink_usage_notebook.ipynb  index.md  package-migration-plan.md  performance.md  ploscb_epilink_methods_appendix.md  ploscb_epilink_methods_main.md  ploscb_epilink_methods_subsection.md  usage.md  usage_guide.ipynb
docs/.ipynb_checkpoints/: epilink_interactive_heatmap-checkpoint.ipynb  epilink_interactive_heatmap_walkthrough-checkpoint.ipynb
docs/assets/: epilink.aux  epilink.bbl  epilink.blg  epilink.fdb_latexmk  epilink.fls  epilink.tex  epilink_plos_methods_subsection.aux  epilink_plos_methods_subsection.blg  epilink_plos_methods_subsection.fdb_latexmk  epilink_plos_methods_subsection.fls  epilink_plos_methods_subsection.tex  epilink_schematic.html  references.bib
evaluation/: .gitattributes  .gitignore  README.md  Snakefile  config.yaml  requirements.txt
evaluation/data/raw/boston/: boston_data_processing.py
evaluation/figures/: Fig1.tiff  Fig3.tiff  Fig4.tiff  figures.ipynb
evaluation/mauscript/: ploscb_appendix.tex  ploscb_main.tex  references.bib
evaluation/mauscript/figures/: Fig2.tif  Fig3.tif  Fig4.tif  Fig5.tif  Figure1.tif  Figure2.tif  Figure3.tif  Figure4.tif  Figure5.tif  Figure6.tif  S1 Fig.tif  S1 Figure.tif  S1_Fig.tif  S1_Figure.tif  S2_Fig.tif  S2_Figure.tif  S3_Fig.tif  S3_Figure.tif
evaluation/results/boston/: cluster_composition.parquet  cluster_sizes.parquet  cluster_summary.parquet
evaluation/results/figures/: Fig2.tif  Fig3.tif  Fig4.tif  Fig5.tif  Fig6.tif  Fig7.tif  S1 Fig.tif  S1_Fig.tif  ap_loss.tif  boston.tif  f1_loss.tif  perturbation.tif  temporal.tif
evaluation/results/scovmod/: scovmod_tree.gml  tree_heterogeneity.json
evaluation/results/sparsification/: optimal_thresholds.json  score_surfaces.parquet  sparsify_edge_retention.parquet
evaluation/results/stability/: case_counts_over_time.parquet  stability_resolution_selection.parquet  temporal_stability_EDD.parquet  temporal_stability_EDS.parquet  temporal_stability_ESD.parquet  temporal_stability_ESS.parquet  temporal_stability_LD.parquet
evaluation/results/synthetic/: baseline_scores.parquet  baseline_summary.parquet  results.parquet
evaluation/src/evaluation/: baseline.py  boston.py  config.py  evaluate.py  experiments.py  figures.ipynb  figures.py  heterogeneity.py  leiden.py  metrics.py  models.py  plotting.py  scovmod.py  sensitivity_figure.py  sparsification.py  sparsify_analysis.py  specs.py  stability.py  temporal_stability.py  testing.ipynb
examples/: characteristics.ipynb  grid_to_csv.py  quickstart.py  simulation.ipynb  transmission_tree.gml
mauscript/figures/: Fig1.tif  Fig3.tif  Fig4.tif  Fig5.tif  S2_Fig.tif  S3_Fig.tif
results/figures/: ap_loss.tif  baseline.tif  f1_loss.tif  surfaces.tif
results/scovmod/: component_sizes.parquet
results/sparsification/: optimal_thresholds.json
results/stability/: temporal_stability_LS.parquet
results/synthetic/: baseline_summary.parquet  results.parquet
scripts/: test_release.sh
src/epilink/: __init__.py  __main__.py  cli.py  epilink.py  infectiousness_profile.py  main.py  parameters.py  profiles.py  simulate_epidemic_and_genomic.py  transmission_linkage_model.py
src/epilink/cli/: __init__.py  main.py
src/epilink/inference/: __init__.py  draws.py  estimator.py  kernels.py
src/epilink/model/: __init__.py  clock.py  epilink.py  exceptions.py  parameters.py  profiles.py  results.py
src/epilink/sequence/: __init__.py  packing.py
src/epilink/simulation/: __init__.py  epidemic.py  genome.py  genomics.py  outbreak.py  pairwise.py  results.py
src/evaluation/: baseline.py  config.py  evaluate.py  figures.py  metrics.py  plotting.py  scovmod.py  stability.py
tests/: test_cli.py  test_cli_main.py  test_coverage_improvements.py  test_epilink.py  test_exceptions.py  test_linkage.py  test_linkage_errors.py  test_mutation_models.py  test_parameters.py  test_profiles.py  test_profiles_edges.py  test_simulate_epidemic_and_genomic.py  test_simulation.py  test_transmission_linkage_model.py
