[build-system]
requires = ["hatchling>=1.22"]
build-backend = "hatchling.build"

[project]
name = "epilink"
version = "0.1.2"
description = "Epidemiological Linkage Inference from Temporal and Genetic Data with a Variable Infectiousness (E/P/I) Model for SARS-CoV-2."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Dominic Arthur", email = "arthurdominic04@gmail.com" }
]
maintainers = [
    { name = "Dominic Arthur", email = "arthurdominic04@gmail.com" }
]
keywords = [
    "epidemiology",
    "SARS-CoV-2",
    "infectious-disease",
    "genomics",
    "transmission",
    "linkage-inference"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]
dependencies = [
    "numpy>=2.0,<2.5",
    "scipy>=1.14,<2.0",
    "numba>=0.64,<0.65",
    "llvmlite>=0.46,<0.47",
    "networkx>=3.0,<4.0",
    "pandas>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3",
    "pytest-mock>=3.10",
    "pytest-cov>=4.0",
    "mypy>=1.4",
    "ruff>=0.5",
    "black>=24.1",
    "pre-commit>=3.3",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
]
all = [
    "epilink[dev,docs]",
]

[project.urls]
Homepage = "https://github.com/ydnkka/epilink"
Issues = "https://github.com/ydnkka/epilink/issues"
Documentation = "https://github.com/ydnkka/epilink#readme"
Repository = "https://github.com/ydnkka/epilink"
"Bug Tracker" = "https://github.com/ydnkka/epilink/issues"
"Release Notes" = "https://github.com/ydnkka/epilink/releases"

[project.scripts]
epilink = "epilink.cli:main"

[tool.hatchling.build.targets.wheel]
packages = ["src/epilink"]

[tool.hatchling.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/docs",
    "/examples",
    "README.md",
    "LICENSE",
    "CITATION.cff",
    "PUBLISHING_GUIDE.md",
    "VERSION_MANAGEMENT.md",
]


[tool.coverage.run]
branch = true
source = ["epilink"]
omit = [
    "src/epilink/__main__.py",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
omit = ["src/epilink/__main__.py"]
precision = 2
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.ruff.lint.isort]
known-first-party = ["epilink"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.10"
strict = false
warn_unused_ignores = true
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "7.3"
testpaths = ["tests"]
addopts = "-v --cov=epilink --cov-report=html --cov-report=term-missing"
filterwarnings = [
    "error::DeprecationWarning:epilink",
    "ignore::DeprecationWarning",
]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
